[Fix] Alert does not overflow on small screens

--- a/resources/css/gamelayout.css
+++ b/resources/css/gamelayout.css
@@ -486,7 +486,7 @@ input[type="submit"] {
     position:absolute;
     top:-2rem;
     width:93%;
-    height:15rem;
+    min-height:15rem;
     z-index:1;
 }
 #alert_control .title {
